// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`topics selectors get topic from id 1`] = `
Object {
  "name": "random 2",
}
`;

exports[`topics selectors get topics array from state 1`] = `
Array [
  Object {
    "name": "random",
  },
  Object {
    "name": "random 2",
  },
]
`;

exports[`topics selectors get undefined topic when topicId is unknown 1`] = `undefined`;
